--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   firebase_messaging: ^14.7.10
   firebase_auth: ^4.16.0
   google_sign_in: ^6.2.1
+  url_launcher: ^6.2.4
 
 dev_dependencies:
   flutter_test:
